# terrance-teacher

./: .cursorrules  LICENSE  README.md  pyproject.toml
data/: teacher.db
src/terrance_teacher/: cli.py
src/terrance_teacher/core/: examiner.py  models.py  orchestrator.py  teacher.py
src/terrance_teacher/llm/: __init__.py  ollama.py
src/terrance_teacher/memory/: __init__.py  db.py  repo.py
tests/: test_cli.py  test_examiner.py  test_llm_ollama.py  test_memory.py  test_orchestrator.py
