[project]
name = "terrance-teacher"
version = "0.1.0"
description = "An agentic, CLI-based personal AI teacher for experienced engineers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.0",
  "rich>=13.0"
]

[project.scripts]
teach = "terrance_teacher.cli:cli_main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]